--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             <h1 class="album">Album Tracks</h1>
             <h3>Listen to few of the hit tracks from Rhythms of the New Dawn album</h3>
         </div>
-    <div class="main-card">
-        <div><img src="Images/album.jpg" alt="img">
+    <div class="container">
+        <div class="main-card"><img src="Images/album.jpg" alt="img">
         <p class="botton"><a href="music/lagos-hustle.mp3">Listen Now</a></p></div>
-        <div><img src="Images/album1.jpg" alt="img">
+        <div class="main-card"><img src="Images/album1.jpg" alt="img">
         <p class="botton"><a href="music/Afrobeat Prophecy.mp3">Listen Now</a></p></div>
-        <div><img src="Images/album2.jpg" alt="img">
+        <div class="main-card"><img src="Images/album2.jpg" alt="img">
         <p class="botton"><a href="music/Voice of Freedom (1).mp3">Listen Now</a></p></div>
     </div> 
     </section>
